--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visa Guide Application</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        .container {
-            background: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        h1 { color: #333; }
-        .status { 
-            padding: 10px;
-            background: #4CAF50;
-            color: white;
-            border-radius: 5px;
-            margin-top: 20px;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>🌍 Global Visa Guide</title>
+<style>
+body { font-family: Arial, sans-serif; background:#f0f2f5; margin:0; padding:0; }
+header { background:#1e3d59; color:white; padding:15px; text-align:center; }
+.container { max-width:600px; margin:50px auto; padding:20px; background:white; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.2);}
+select, button { padding:10px; margin-top:10px; width:100%; font-size:16px; }
+#result { margin-top:20px; padding:15px; background:#e0e0e0; border-radius:5px; }
+</style>
 </head>
 <body>
-    <div class="container">
-        <h1>🌍 Visa Guide Application</h1>
-        <p>Welcome to the Visa Guide Application System</p>
-        <div class="status">
-            ✓ System Online
-        </div>
-    </div>
+<header>
+<h1>🌍 Global Visa Guide</h1>
+</header>
+<div class="container">
+    <select id="country">
+        <option value="">-- Select a Country --</option>
+        <option value="France">France</option>
+        <option value="Germany">Germany</option>
+        <option value="United States">United States</option>
+        <option value="Canada">Canada</option>
+        <option value="Australia">Australia</option>
+        <option value="Japan">Japan</option>
+        <option value="China">China</option>
+        <option value="Brazil">Brazil</option>
+        <option value="India">India</option>
+        <option value="Russia">Russia</option>
+        <option value="Italy">Italy</option>
+        <option value="Spain">Spain</option>
+        <option value="Mexico">Mexico</option>
+        <option value="South Africa">South Africa</option>
+        <option value="Egypt">Egypt</option>
+        <option value="Turkey">Turkey</option>
+        <option value="Saudi Arabia">Saudi Arabia</option>
+        <option value="Argentina">Argentina</option>
+        <option value="Sweden">Sweden</option>
+        <option value="Norway">Norway</option>
+        <option value="Netherlands">Netherlands</option>
+        <option value="Switzerland">Switzerland</option>
+        <option value="Thailand">Thailand</option>
+        <option value="Singapore">Singapore</option>
+        <option value="South Korea">South Korea</option>
+        <option value="New Zealand">New Zealand</option>
+        <option value="Kenya">Kenya</option>
+        <option value="Morocco">Morocco</option>
+        <option value="Greece">Greece</option>
+        <option value="Portugal">Portugal</option>
+    </select>
+    <button onclick="searchVisa()">Search Visa Info</button>
+    <div id="result">Select a country to see visa requirements.</div>
+</div>
+<script>
+async function searchVisa() {
+    const country = document.getElementById('country').value;
+    const resultDiv = document.getElementById('result');
+    if (!country) {
+        resultDiv.innerHTML = "Please select a country.";
+        return;
+    }
+    try {
+        const res = await fetch('/visa/' + encodeURIComponent(country));
+        const data = await res.json();
+        if (data.requirements) {
+            resultDiv.innerHTML = "<strong>" + country + " Visa Requirements:</strong><br>" + data.requirements;
+        } else {
+            resultDiv.innerHTML = data.message;
+        }
+    } catch (err) {
+        resultDiv.innerHTML = "Error fetching data. Please try again later.";
+    }
+}
+</script>
 </body>
 </html>
